paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_2/sample_003/target.compile.log
error[E0106]: missing lifetime specifier
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_2/sample_003/target.rs:7:12
  |
7 | type Tp1 = &mut S1;
  |            ^ expected named lifetime parameter
  |
help: consider introducing a named lifetime parameter
  |
7 | type Tp1<'a> = &'a mut S1;
  |         ++++    ++

error[E0106]: missing lifetime specifier
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_2/sample_003/target.rs:15:12
   |
15 | type Tp2 = &mut S2;
   |            ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
15 | type Tp2<'a> = &'a mut S2;
   |         ++++    ++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0106`.